Fix orientationchange; Disable scale animations on mobile/Safari
Also fix buttons being non-interactive on Safari.
Note: resize now broken in inspector responsive mode. Resize should work normally with inspector closed.

--- a/styles/home/Profile.module.scss
+++ b/styles/home/Profile.module.scss
@@ -70,6 +70,7 @@
     circle {
       height: 100%;
       width: 100%;
+      overflow: visible;
       transform-origin: center;
       will-change: transform, opacity;
     }
